// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Компоненты Accordion AccordionArrow снимок 1`] = `
<span
  class="itpc-accordion-arrow"
>
  <i
    class="itpc-icon__arrow itpc-icon__arrow_orientation_bottom"
  >
    <svg
      height="8"
      viewBox="0 0 12 8"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.5134 0L6 4.82292L1.48659 0L0 1.58854L6 8L12 1.58854L10.5134 0Z"
      />
    </svg>
  </i>
</span>
`;

exports[`Компоненты Accordion AccordionBody снимок с isOpened=true 1`] = `
<div
  class="itpc-accordion-body itpc-accordion-body_opened"
>
  Контент
</div>
`;

exports[`Компоненты Accordion AccordionHeader снимок с isActive и isOpened 1`] = `
<div
  class="itpc-accordion-header itpc-accordion-header_opened itpc-accordion-header_active"
  id="itpc-accordion-header"
>
  Заголовок с состоянием
</div>
`;

exports[`Компоненты Accordion AccordionItem снимок с контентом 1`] = `
<div
  class="itpc-accordion-item"
>
  Item 1
</div>
`;

exports[`Компоненты Accordion Рендер Accordion с дефолтными пропсами (снимок) 1`] = `
<div
  class="itpc-accordion"
>
  <div
    class="itpc-accordion-item"
  >
    Item 1
  </div>
</div>
`;
